--- a/algorithms/hashAndLineTable.html
+++ b/algorithms/hashAndLineTable.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-
 <body>
   <script>
-    function Table() {
-      this.array = new Array(5);
+    function Table () {
+      this.array = new Array(50);
       this.hashFn = function (key) {
         let num = 0;
         for (let i = 0; i < key.length; i++) {
@@ -19,25 +17,25 @@
         }
         return num % this.array.length
       }
-
+      
       this.set = function (key, value) {
         let hashKey = this.hashFn(key)
         let index
-        if (this.array[hashKey] === undefined) {
+        if(this.array[hashKey] === undefined) {
           this.array[hashKey] = new valueHash(key, value)
         } else {
           index = ++hashKey
           let onceFirst;
           while (this.array[index] !== undefined) {
-            if (index === this.array.length - 1 && !onceFirst) {
+            if (index === this.array.length -1 && !onceFirst) {
               index = 0;
               onceFirst = true;
             }
             index++
           }
-          this.array[index] = new valueHash(key, value)
         }
 
+        this.array[index] = new valueHash(key, value)
 
       }
       this.get = function (key) {
@@ -56,7 +54,7 @@
               return this.array[index].value
             }
             if (index === this.array.length - 1 && !onceFirst) {
-              index = -1; // 后面要++，为了从0继续所以-1
+              index = 0;
               onceFirst = true;
             }
             index++
@@ -66,20 +64,75 @@
 
       }
       this.getAll = function () {
-        this.array.forEach(item => {
-          if (item) {
+        this.array.forEach(item=>{
+          if(item){
             console.log(`${item.key} --- ${item.value}`)
           }
         })
       }
     }
-    function valueHash(key, value) {
+    function valueHash (key, value) {
       this.key = key;
       this.value = value;
     }
+  </script>
 
-    var t = new Table()
+  <script>
+   class Node {
+     constructor(data) {
+       this.prev = null;
+       this.next = null;
+       this.data = data
+     }
+   }
+
+   class List {
+     constructor(){
+       this.headName = 'head'
+       this.node = new Node(this.headName)
+     }
+     append(item, insertItem){
+      let lastNode;
+      if (arguments.length === 1) {
+        lastNode = this.find()
+      } else {
+        lastNode = this.find(insertItem)
+      }
+      const nodeItem = new Node(item)
+      nodeItem.next =  lastNode.next
+      nodeItem.prev =  lastNode
+      lastNode.next = nodeItem;
+      this.node.prev = nodeItem
+     }
+     find (item) {
+      let aimItem = this.node
+      // if (aimItem.next === null) {
+      //   return aimItem
+      // }
+      // while (aimItem.next) {
+      //   if (aimItem.data === item) {
+      //     return aimItem
+      //   }
+      //   aimItem = aimItem.next
+      // }
+      // return aimItem
+
+      while (aimItem && aimItem.next && aimItem.data !== item) {
+        aimItem = aimItem.next
+      }
+      return aimItem
+     }
+     remove (item) {
+      const aimItem = this.find(item);
+      if (aimItem.data === this.headName) {
+        return;
+      }
+      aimItem.prev.next = aimItem.next
+      aimItem.next.prev = aimItem.prev
+      aimItem.next = null;
+      aimItem.prev = null;
+     }
+   }
   </script>
 </body>
-
 </html>
