--- a/algorithms/sort.html
+++ b/algorithms/sort.html
@@ -179,7 +179,7 @@
 
     console.time('快速排序')
     var arr8 = [3, 2, 1, 5, 500, 98, 12, 0, -99, -1]
-    var arr8 = [3, 2, 5, 6,7]
+    var arr8 = [3, 2, 5, 6, 7]
 
     const quickSort1 = arr => {
       if (arr.length <= 1) {
@@ -213,9 +213,9 @@
   for (let i = 0; i < arr.length; i++) {
     // const item = arr[i];
     let j = i;
-    const nextItem = arr[j + 1 ]
+    const nextItem = arr[j + 1]
     while (j >= 0 && arr[j] > nextItem) {
-      arr[j +1] = arr[j]
+      arr[j + 1] = arr[j]
       j--
     }
 
@@ -223,9 +223,10 @@
       arr[j + 1] = nextItem
     }
   }
-console.log(arr);
+  console.log(arr);
 
   console.timeEnd('插入排序')
 
 </script>
+
 </html>
